codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__personality_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
◑ CPU ·······▄ 42% MEM ·······▅ 58% GPU ·······▃ 23% speed ········ warming spac


  Select Personality
  Choose how A-Eye communicates. Disable in /experimental.

› 1. Friendly (current)  Warm, collaborative, and helpful.
  2. Pragmatic           Concise, task-focused, and direct.

  Press enter to confirm or esc to go back
